Project

General

Profile

Actions

Bug #55110

open

mount.ceph: mount helper incorrectly passes `ms_mode' mount option to older kernel

Added by Venky Shankar about 2 years ago. Updated over 1 year ago.

Status:
Pending Backport
Priority:
High
Assignee:
Category:
Correctness/Safety
Target version:
% Done:

0%

Source:
Community (dev)
Tags:
backport_processed
Backport:
quincy
Regression:
Yes
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

seen here - http://pulpito.front.sepia.ceph.com/yuriw-2022-03-28_19:24:40-smoke-quincy-distro-default-smithi/6765567/

kernel used - v5.4-generic, which does no understand `ms_mode' mount option (that was added in 5.11+).

This causes mount failures when falling back to older mount syntax. Fix is to not pass `ms_mode' mount option when using older mount syntax iff the user has not explicitly specified a `ms_mode'.


Related issues 1 (1 open0 closed)

Copied to CephFS - Backport #55264: quincy: mount.ceph: mount helper incorrectly passes `ms_mode' mount option to older kernelIn ProgressActions
Actions #1

Updated by Venky Shankar about 2 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 45689
Actions #2

Updated by Venky Shankar about 2 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot about 2 years ago

  • Copied to Backport #55264: quincy: mount.ceph: mount helper incorrectly passes `ms_mode' mount option to older kernel added
Actions #4

Updated by Backport Bot over 1 year ago

  • Tags set to backport_processed
Actions

Also available in: Atom PDF